opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/n_ary"
bug-reports: "https://github.com/janestreet/n_ary/issues"
dev-repo: "git+https://github.com/janestreet/n_ary.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/n_ary/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.11.0"}
  "base"
  "expect_test_helpers_core"
  "ppx_compare"
  "ppx_enumerate"
  "ppx_hash"
  "ppx_jane"
  "ppx_sexp_conv"
  "ppx_sexp_message"
  "dune"                     {>= "2.0.0"}
]
synopsis: "A library for N-ary datatypes and operations."
description: "

A library for N-ary datatypes and operations.

Provides tuples, enumerations, variants, and list operations
implemented for N from 2 to 16, inclusive.
"
